--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ const { Content } = await entry.render();
           <img class="mb-8 w-full" src="/images/404.png" alt="page not found" />
           <h1 class="h2 mb-4" set:html={markdownify(entry.data.title)} />
           <Content />
-          <a href="/" class="btn btn-primary mt-8">Back To Home</a>
+          <a href="/" class="btn btn-primary mt-8">Volver a la página de Inicio</a>
         </div>
       </div>
     </div>
