--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,6 +26,7 @@ const { title, description, meta_title, image } = entry.data;
                 Full Name <span class="text-red-500">*</span>
               </label>
               <input
+                name="name"
                 id="name"
                 class="form-input"
                 placeholder="John Doe"
@@ -37,6 +38,7 @@ const { title, description, meta_title, image } = entry.data;
                 Working Mail <span class="text-red-500">*</span>
               </label>
               <input
+                name="email"
                 id="mail"
                 class="form-input"
                 placeholder="john.doe@email.com"
@@ -48,6 +50,7 @@ const { title, description, meta_title, image } = entry.data;
                 Anything else? <span class="text-red-500">*</span>
               </label>
               <textarea
+                name="message"
                 class="form-input"
                 placeholder="Message goes here..."
                 id="message"
