--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,6 +29,16 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-SNPP111RD5');
+    </script>
+    
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
@@ -139,6 +149,7 @@ const { title, meta_title, description, image, noindex, canonical } =
     />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
+   
   <body>
     <TwSizeIndicator />
     <Header />
