Metido partytown para mejorar lighthouse, y otros

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -30,8 +30,8 @@ const { title, meta_title, description, image, noindex, canonical } =
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
-    <script>
+    <script async type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
+    <script type="text/partytown">
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
