--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import Base from "@layouts/Base.astro";
 import PageHeader from "@partials/PageHeader.astro";
 import { getEntryBySlug } from "astro:content";
 
-const entry = await getEntryBySlug("pages", "contact");
+const entry = await getEntryBySlug("pages", "contacto");
 const { contact_form_action } = config.params;
 const { title, description, meta_title, image } = entry.data;
 ---
@@ -23,40 +23,40 @@ const { title, description, meta_title, image } = entry.data;
           <form data-netlify="true" name="contact"  method="POST">
             <div class="mb-6">
               <label for="name" class="form-label">
-                Full Name <span class="text-red-500">*</span>
+                Nombre <span class="text-red-500">*</span>
               </label>
               <input
                 name="name"
                 id="name"
                 class="form-input"
-                placeholder="John Doe"
+                placeholder="Escribe aquí tu nombre"
                 type="text"
               />
             </div>
             <div class="mb-6">
               <label for="mail" class="form-label">
-                Working Mail <span class="text-red-500">*</span>
+                Email <span class="text-red-500">*</span>
               </label>
               <input
                 name="email"
                 id="mail"
                 class="form-input"
-                placeholder="john.doe@email.com"
+                placeholder="mail@mail.com"
                 type="email"
               />
             </div>
             <div class="mb-6">
               <label for="message" class="form-label">
-                Anything else? <span class="text-red-500">*</span>
+                Mensaje <span class="text-red-500">*</span>
               </label>
               <textarea
                 name="message"
                 class="form-input"
-                placeholder="Message goes here..."
+                placeholder="Escribe aquí tu mensaje..."
                 id="message"
                 rows="8"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>
       </div>
