--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -9,14 +9,15 @@ const authorIndex = await getEntryBySlug<any, string>("authors", "_index");
 const authors = await getSinglePage("authors");
 ---
 
-<Base title={authorIndex.data.title}>
-  <PageHeader title={authorIndex.data.title} />
+<Base title="{authorIndex.data.title}">
+  <PageHeader title="{authorIndex.data.title}" />
   <section class="section-sm pb-0">
     <div class="container">
       <div class="row justify-center">
         {
           authors.map((author) => (
             <div class="mb-14 md:col-6 lg:col-4">
+              <AuthorCard data={author} />
             </div>
           ))
         }
