--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,9 +29,9 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
-    <script>
+    <!-- Google tag (gtag.js) reverted to stable -->
+    <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
+    <script type="text/partytown">
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
