--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -32,6 +32,7 @@ import { markdownify } from "@lib/utils/textConverter";
   <div class="border-t border-border py-7 dark:border-darkmode-border">
     <div class="container text-center text-light dark:text-darkmode-light">
       <p set:html={markdownify(config.params.copyright)} />
+      <a href="intranet">Intranet</a>
     </div>
   </div>
 </footer>
