--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,11 +1,11 @@
 ---
-import TwSizeIndicator from "@components/TwSizeIndicator.astro";
-import config from "@config/config.json";
-import theme from "@config/theme.json";
-import { plainify } from "@lib/utils/textConverter";
-import Footer from "@partials/Footer.astro";
-import Header from "@partials/Header.astro";
-import "@styles/main.scss";
+import TwSizeIndicator from "@/components/TwSizeIndicator.astro";
+import config from "@/config/config.json";
+import theme from "@/config/theme.json";
+import { plainify } from "@/lib/utils/textConverter";
+import Footer from "@/partials/Footer.astro";
+import Header from "@/partials/Header.astro";
+import "@/styles/main.scss";
 
 // font families
 const pf = theme.fonts.font_family.primary;
@@ -29,31 +29,20 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <!-- <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
-    <script type="text/partytown"> 
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-SNPP111RD5');
-    </script>-->
-    
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
     <meta name="theme-name" content="astroplate" />
-    <meta name="msapplication-TileColor" content="#6060A8" />
+    <meta name="msapplication-TileColor" content="#000000" />
     <meta
       name="theme-color"
       media="(prefers-color-scheme: light)"
-      content="#6060A8"
+      content="#fff"
     />
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
-      content="#6060A8"
+      content="#000"
     />
     <meta name="generator" content={Astro.generator} />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -150,7 +139,6 @@ const { title, meta_title, description, image, noindex, canonical } =
     />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
-   
   <body>
     <TwSizeIndicator />
     <Header />
