--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -1,10 +1,10 @@
 ---
-import Logo from "@components/Logo.astro";
-import Social from "@components/Social.astro";
-import config from "@config/config.json";
-import menu from "@config/menu.json";
-import social from "@config/social.json";
-import { markdownify } from "@lib/utils/textConverter";
+import Logo from "@/components/Logo.astro";
+import Social from "@/components/Social.astro";
+import config from "@/config/config.json";
+import menu from "@/config/menu.json";
+import social from "@/config/social.json";
+import { markdownify } from "@/lib/utils/textConverter";
 ---
 
 <footer class="bg-theme-light dark:bg-darkmode-theme-light">
@@ -32,7 +32,6 @@ import { markdownify } from "@lib/utils/textConverter";
   <div class="border-t border-border py-7 dark:border-darkmode-border">
     <div class="container text-center text-light dark:text-darkmode-light">
       <p set:html={markdownify(config.params.copyright)} />
-      <a href="intranet">Intranet</a>
     </div>
   </div>
 </footer>
