--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -1,15 +1,15 @@
 ---
-import AuthorCard from "@components/AuthorCard.astro";
-import Base from "@layouts/Base.astro";
-import { getSinglePage } from "@lib/contentParser.astro";
-import PageHeader from "@partials/PageHeader.astro";
+import AuthorCard from "@/components/AuthorCard.astro";
+import Base from "@/layouts/Base.astro";
+import { getSinglePage } from "@/lib/contentParser.astro";
+import PageHeader from "@/partials/PageHeader.astro";
 import { getEntryBySlug } from "astro:content";
 
-const authorIndex = await getEntryBySlug("authors", "_index");
+const authorIndex = await getEntryBySlug<any, string>("authors", "index");
 const authors = await getSinglePage("authors");
 ---
 
-<Base title={authorIndex.data}>
+<Base title={authorIndex.data.title}>
   <PageHeader title={authorIndex.data.title} />
   <section class="section-sm pb-0">
     <div class="container">
