--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,10 +1,10 @@
 ---
-import config from "@config/config.json";
-import Base from "@layouts/Base.astro";
-import PageHeader from "@partials/PageHeader.astro";
+import config from "@/config/config.json";
+import Base from "@/layouts/Base.astro";
+import PageHeader from "@/partials/PageHeader.astro";
 import { getEntryBySlug } from "astro:content";
 
-const entry = await getEntryBySlug("pages", "contacto");
+const entry = await getEntryBySlug("pages", "contact");
 const { contact_form_action } = config.params;
 const { title, description, meta_title, image } = entry.data;
 ---
@@ -20,43 +20,40 @@ const { title, description, meta_title, image } = entry.data;
     <div class="container">
       <div class="row">
         <div class="mx-auto md:col-10 lg:col-6">
-          <form data-netlify="true" name="contact"  method="POST">
+          <form action={contact_form_action} method="POST">
             <div class="mb-6">
               <label for="name" class="form-label">
-                Nombre <span class="text-red-500">*</span>
+                Full Name <span class="text-red-500">*</span>
               </label>
               <input
-                name="name"
                 id="name"
                 class="form-input"
-                placeholder="Escribe aquí tu nombre"
+                placeholder="John Doe"
                 type="text"
               />
             </div>
             <div class="mb-6">
               <label for="mail" class="form-label">
-                Email <span class="text-red-500">*</span>
+                Working Mail <span class="text-red-500">*</span>
               </label>
               <input
-                name="email"
                 id="mail"
                 class="form-input"
-                placeholder="mail@mail.com"
+                placeholder="john.doe@email.com"
                 type="email"
               />
             </div>
             <div class="mb-6">
               <label for="message" class="form-label">
-                Mensaje <span class="text-red-500">*</span>
+                Anything else? <span class="text-red-500">*</span>
               </label>
               <textarea
-                name="message"
                 class="form-input"
-                placeholder="Escribe aquí tu mensaje..."
+                placeholder="Message goes here..."
                 id="message"
                 rows="8"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
