--- a/src/pages/posts/page/[slug].astro
+++ b/src/pages/posts/page/[slug].astro
@@ -1,18 +1,18 @@
 ---
-import BlogCard from "@components/BlogCard.astro";
-import Pagination from "@components/Pagination.astro";
-import config from "@config/config.json";
-import Base from "@layouts/Base.astro";
-import { getSinglePage } from "@lib/contentParser.astro";
-import { getAllTaxonomy, getTaxonomy } from "@lib/taxonomyParser.astro";
-import { sortByDate } from "@lib/utils/sortFunctions";
-import PageHeader from "@partials/PageHeader.astro";
-import PostSidebar from "@partials/PostSidebar.astro";
+import BlogCard from "@/components/BlogCard.astro";
+import Pagination from "@/components/Pagination.astro";
+import config from "@/config/config.json";
+import Base from "@/layouts/Base.astro";
+import { getSinglePage } from "@/lib/contentParser.astro";
+import { getAllTaxonomy, getTaxonomy } from "@/lib/taxonomyParser.astro";
+import { sortByDate } from "@/lib/utils/sortFunctions";
+import PageHeader from "@/partials/PageHeader.astro";
+import PostSidebar from "@/partials/PostSidebar.astro";
 import { getEntryBySlug } from "astro:content";
 
 const { blog_folder } = config.settings;
 const { slug } = Astro.params;
-const postIndex = await getEntryBySlug<any, string>(blog_folder, "_index");
+const postIndex = await getEntryBySlug<any, string>(blog_folder, "index");
 const posts = await getSinglePage(blog_folder);
 const allCategories = await getAllTaxonomy(blog_folder, "categories");
 const categories = await getTaxonomy(blog_folder, "categories");
