--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -28,7 +28,18 @@ const { title, meta_title, description, image, noindex, canonical } =
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> 
+    <script type="text/partytown" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
+    <script type="text/partytown" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
+    <script type="text/partytown"> 
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-SNPP111RD5');
+    </script>
+
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
