--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,9 +29,7 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!DOCTYPE html>
 <html lang="en">
   <head> 
-    <script type="text/partytown" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
-    <script type="text/partytown" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script is:inline type="text/partytown" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
     <script type="text/partytown"> 
       window.dataLayer = window.dataLayer || [];
