test async for lighthouse

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,7 +29,7 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!DOCTYPE html>
 <html lang="en">
   <head> 
-    <script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script is:inline async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-SNPP111RD5"></script>
     <script type="text/partytown"> 
       window.dataLayer = window.dataLayer || [];
@@ -37,7 +37,6 @@ const { title, meta_title, description, image, noindex, canonical } =
       gtag('js', new Date());
       gtag('config', 'G-SNPP111RD5');
     </script>
-
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
