--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -37,6 +37,10 @@ const { title, meta_title, description, image, noindex, canonical } =
       gtag('js', new Date());
       gtag('config', 'G-SNPP111RD5');
     </script>
+
+    <!-- PWA manifest -->
+    <link rel="manifest" href="/app.webmanifest">
+
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
