--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,7 +23,7 @@ const { title, description, meta_title, image } = entry.data;
           <form action={contact_form_action} method="POST">
             <div class="mb-6">
               <label for="name" class="form-label">
-                Full Name <span class="text-red-500">*</span>
+                Nombre <span class="text-red-500">*</span>
               </label>
               <input
                 id="name"
@@ -34,26 +34,26 @@ const { title, description, meta_title, image } = entry.data;
             </div>
             <div class="mb-6">
               <label for="mail" class="form-label">
-                Working Mail <span class="text-red-500">*</span>
+                Email <span class="text-red-500">*</span>
               </label>
               <input
                 id="mail"
                 class="form-input"
-                placeholder="john.doe@email.com"
+                placeholder="mail@company.com"
                 type="email"
               />
             </div>
             <div class="mb-6">
               <label for="message" class="form-label">
-                Anything else? <span class="text-red-500">*</span>
+                Mensaje <span class="text-red-500">*</span>
               </label>
               <textarea
                 class="form-input"
-                placeholder="Message goes here..."
+                placeholder="Qué necesitas?"
                 id="message"
                 rows="8"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>
       </div>
