--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const { banner, features } = homepage.data;
     <div class="container">
       <div class="row justify-center">
         <div class="mb-16 text-center lg:col-7">
-          <h1 set:html={markdownify(banner.title)} class="mb-4" />
+          <h1 set:html={markdownify(banner.title)} class="mb-4 deveco-text-gradient" />
           <p set:html={markdownify(banner.content)} class="mb-8" />
           {
             banner.button.enable && (
