--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,10 +3,12 @@ import config from "@/config/config.json";
 import Base from "@/layouts/Base.astro";
 import PageHeader from "@/partials/PageHeader.astro";
 import { getEntryBySlug } from "astro:content";
+import ContactForm from "@/components/ContactForm.astro";
 
 const entry = await getEntryBySlug("pages", "contact");
-const { contact_form_action } = config.params;
 const { title, description, meta_title, image } = entry.data;
+
+
 ---
 
 <Base
@@ -16,47 +18,5 @@ const { title, description, meta_title, image } = entry.data;
   image={image}
 >
   <PageHeader title={title} />
-  <section class="section-sm">
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto md:col-10 lg:col-6">
-          <form action={contact_form_action} method="POST">
-            <div class="mb-6">
-              <label for="name" class="form-label">
-                Nombre <span class="text-red-500">*</span>
-              </label>
-              <input
-                id="name"
-                class="form-input"
-                placeholder="John Doe"
-                type="text"
-              />
-            </div>
-            <div class="mb-6">
-              <label for="mail" class="form-label">
-                Email <span class="text-red-500">*</span>
-              </label>
-              <input
-                id="mail"
-                class="form-input"
-                placeholder="mail@company.com"
-                type="email"
-              />
-            </div>
-            <div class="mb-6">
-              <label for="message" class="form-label">
-                Mensaje <span class="text-red-500">*</span>
-              </label>
-              <textarea
-                class="form-input"
-                placeholder="Qué necesitas?"
-                id="message"
-                rows="8"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
+  <ContactForm />
 </Base>
