--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import { Image } from "@astrojs/image/components";
 import { getEntryBySlug } from "astro:content";
 import { FaCheck } from "react-icons/fa/index.js";
 import { getSinglePage } from "@/lib/contentParser.astro";
+import ContactForm from "@/components/ContactForm.astro";
 
 
 const homepage = await getEntryBySlug("homepage", "index");
@@ -52,25 +53,6 @@ const authors = await getSinglePage("authors");
     </div>
   </section>
   <!-- /Banner -->
-
-  <!-- Authors -->
-  <section class="section-sm pb-0">
-    <div class="container">
-      <div class="row justify-center">
-        <div class="mb-16 text-center">
-          <h2 class="mb-4 deveco-text-gradient">{authorIndex.data.title}</h2>
-          </div>  
-        {
-          authors.map((author:any) => (
-            <div class="mb-14 md:col-6 lg:col-4">
-              <AuthorCard data={author} />
-            </div>
-          ))
-        }
-      </div>
-    </div>
-  </section>
-
 
   <!-- Features -->
   {
@@ -132,6 +114,35 @@ const authors = await getSinglePage("authors");
   }
   <!-- /Features -->
 
+  <!-- Authors -->
+  <section class="section-sm pb-0">
+    <div class="container">
+      <div class="row justify-center">
+        <div class="mb-16 text-center">
+          <h2 class="mb-4 deveco-text-gradient">{authorIndex.data.title}</h2>
+          </div>  
+        {
+          authors.map((author:any) => (
+            <div class="mb-14 md:col-6 lg:col-4">
+              <AuthorCard data={author} />
+            </div>
+          ))
+        }
+      </div>
+    </div>
+  </section>
+
+  <div class="container">
+    <div class="row justify-center">
+      <div class="mt-16 text-center">
+        <h2 class="mb-2 deveco-text-gradient">Contacta con nosotros</h2>
+      </div>
+    </div>
+  </div>
+  <ContactForm />
+
+  {/*
   <Testimonial testimonial={testimonial} />
   <CallToAction call_to_action={call_to_action} />
+   */}
 </Base>
